// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem should match snapshot when completed is set to true 1`] = `
<li
  className="list-item"
  key="4"
>
  <div
    className="item-container"
  >
    <i
      className="far fa-check-square"
      onClick={[Function]}
    />
    <p
      className="completed-item list-item"
      onClick={[Function]}
    >
      Hello
    </p>
    <i
      className="fas fa-times"
      onClick={[Function]}
    />
  </div>
</li>
`;

exports[`ListItem should match snapshot when editable state is true 1`] = `
<li
  className="list-item"
  key="4"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="list-item-input"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value=""
    />
  </form>
</li>
`;

exports[`ListItem should match snapshot when isEditing is true 1`] = `
<li
  className="list-item"
  key="4"
>
  <div
    className="item-container"
  >
    <i
      className="far fa-square"
      onClick={[Function]}
    />
    <p
      className="list-item"
      onClick={[Function]}
    >
      Hello
    </p>
    <i
      className="fas fa-times"
      onClick={[Function]}
    />
  </div>
</li>
`;

exports[`ListItem should match the snapshot 1`] = `
<li
  className="list-item"
  key="4"
>
  <div
    className="item-container"
  >
    <i
      className="far fa-square"
      onClick={[Function]}
    />
    <p
      className="list-item"
      onClick={false}
    >
      Hello
    </p>
    <i
      className="fas fa-times"
      onClick={[Function]}
    />
  </div>
</li>
`;
